src/pages/startups/Startups.scss
/* ... */
.idea-block {
	font-size: 18px;
	line-height: 1.5;
	color: $text-color;
	letter-spacing: 0.26px;

	@include tablet {
		font-size: 17px;
		letter-spacing: 0.3px;
	}

	.slider-with-btn {
		display: none;

		@include tabletBig {
			display: flex;
		}
	}

	li strong,
	li b,
	p strong,
	p b {
		font-weight: $bold-weight;
		color: $bold-color;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	a {
		* {
			font-style: inherit;
			font-weight: inherit;
		}
	}

	h1,
	h2,
	h3 {
		@include title-style;
	}

	h1 {
		color: $h1-color;
		font-size: 44px;
		margin: 0 auto 40px;

		@include tablet {
			margin-bottom: 34px;
			font-size: 34px;
		}

		+ h2 {
			margin-top: 0;
		}
	}

	h2 {
		color: $h2-color;
		font-size: 29px;
		margin-bottom: 20px;
		margin-top: 55px;

		@include tablet {
			margin-top: 50px;
			font-size: 26px;
		}
	}

	h3 {
		color: $h3-color;
		margin-bottom: 20px;
		margin-top: 45px;
		font-size: 24px;

		@include tablet {
			font-size: 20px;
			margin-bottom: 20px;
			margin-top: 35px;
		}

		+ ul {
			margin-top: 0;
		}
	}

	h4 {
		font-family: $LouisGeorgeCafBold;
		margin-bottom: 0;
		font-size: 15px;
		line-height: 1.2;
		margin-bottom: 8px;
		color: $h4-sub-color;
		letter-spacing: 0.8px;

		@include tablet {
			font-size: 14px;
		}
	}

	li,
	p {
		word-spacing: 0.5px;
	}

	p + p,
	li + li {
		margin-top: $p-margin;
	}

	p.description__has-em {
		font-weight: 300;
		font-size: 17px;

		@include tablet {
			font-size: 16px;
		}

		&:not(:first-of-type) {
			margin-top: 10px;
		}

		+ h2 {
			margin-top: 40px;
		}
	}

	// .idea-block__list
	ul {
		margin: $p-margin 0;

		li {
			position: relative;
			padding-left: 26px;
			margin-left: 2px;

			@include tablet {
				padding-left: 22px;
			}

			&::before {
				content: '';
				display: block;
				flex-shrink: 0;
				width: 5px;
				height: 5px;
				border-radius: 50%;
				background: $h3-color;
				position: absolute;
				top: 11px;
				left: 0;

				@include tablet {
					top: 10px;
				}
			}

			&:has(a) {
				&::before {
					top: 12.5px;

					@include tablet {
						top: 11.5px;
					}
				}
			}

			&:has(a:not(:only-child)) {
				&::before {
					top: 15.5px;

					@include tablet {
						top: 14.5px;
					}
				}
			}
		}
	}

	a {
		display: inline-flex;
		align-items: center;
		width: fit-content;
		max-width: calc(100% - 3px);
		border-radius: 100px;
		padding-left: 14px;
		margin: 1px 3px;
		color: $link-color;
		border: 1px solid rgba($link-color, 0.5);
		background-color: rgba(#000000, 0.55);
		line-height: 1.4;
		overflow: hidden;
		transition: 0.2s;

		@media (hover: hover) and (pointer: fine) {
			&:hover {
				@include hover-text-link;
			}
		}

		&:active {
			@include hover-text-link;
			transform: scale(0.85);
		}

		// icon for links
		&::after {
			content: '';
			display: block;
			flex-shrink: 0;
			width: 13px;
			aspect-ratio: 1 / 1;
			margin-left: 8px;
			margin-right: 14px;
			line-height: 1;
			transform: translateY(-0.5px);
			opacity: 0.8;

			// ARROW
			$svg-local: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"><line x1="4" y1="20" x2="20" y2="4"></line><polyline points="8 4 20 4 20 16"></polyline></svg>';
			mask: url('data:image/svg+xml;charset=UTF-8,#{$svg-local}') no-repeat center / contain;
			-webkit-mask: url('data:image/svg+xml;charset=UTF-8,#{$svg-local}') no-repeat center / contain;
			background-color: currentColor;
		}

		&[href^='http'] {
			&::after {
				width: 16px;

				$svg-external: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>';
				mask: url('data:image/svg+xml;charset=UTF-8,#{$svg-external}') no-repeat center / contain;
				-webkit-mask: url('data:image/svg+xml;charset=UTF-8,#{$svg-external}') no-repeat center /
					contain;
			}
		}

		span {
			display: block;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}

		&:not(:only-child) {
			margin: 6px 3px;
		}
	}
}

.lang-sidebar {
	display: flex;
	width: 50%;
	position: sticky;
	top: 80px;
	margin-left: 80px;
	z-index: 10;

	@include tabletBig {
		margin-left: 0;
		width: 100%;
		position: relative;
		top: 0;
	}

	// .lang-sidebar--has-toc
	&--has-toc {
		top: 130px;
		margin-top: 45px;

		@include tabletBig {
			top: unset;
			margin-top: 0;
		}
	}
}

.desktop-slider {
	width: 100%;
}

@include tabletBig {
	[data-simplebar],
	.desktop-slider,
	.slider-with-btn .copy-tablet,
	.slider-with-btn .idea-contacts {
		display: none;
	}
}

.idea-block__preview {
	.idea-block {
		font-size: 16px;
	}
}

.idea-block__action {
	display: flex;
	margin-top: 50px;
	justify-content: flex-end;

	@include tabletBig {
		margin-top: 40px;
		justify-content: flex-start;
	}
}

@mixin idea-block__more_hover {
	background: rgba(#000000, 0.25);

	&::before,
	&::after {
		width: calc(100% + 1px);
		height: calc(100% + 1px);
	}
}
/* ... */

